FIX: Drop of blood too large

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -51,7 +51,7 @@ main
     background-image    url('more-btn.png')
     background-position bottom center
     background-repeat   no-repeat
-    background-size     10rem
+    background-size     8rem
 
     @media tablet
       font-size         6rem
